# bukhosini

./: .gitignore  README.md  calcs.py  file.csv  index.html  info.txt  optimisations.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/canvas/: Canvas.svelte  DrawingControl.svelte  InitDocument.svelte
src/components/entity/: BoundingBox.svelte
src/components/general/: BitmapButton.svelte  DocumentTabBtn.svelte  DropDownBitmap.svelte  DullButton.svelte  EditableInput.svelte  EditableSelect.svelte  Gap.svelte  GridNorth.svelte  IncrementDecrementButton.svelte  PropertyAccordion.svelte  RaisedButton.svelte  RaisedDiv.svelte  RaisedSkin.svelte  Tabs.svelte  index.html  index.ts
src/components/icons/: Align.svelte  Arrange.svelte  CanvasMessage.svelte  Close.svelte  Constraints.svelte  DimensionsIcon.svelte  DropDown.svelte  DropdownOutline.svelte  Edit.svelte  Ellipse.svelte  Erasor.svelte  Eye.svelte  Hand.svelte  HideWindow.svelte  History.svelte  ICON.svelte  ICompleteSquare.svelte  Inflate.svelte  LayerIcon.svelte  Line.svelte  Minimize.svelte  Minus.svelte  MoreOptions.svelte  NewFile.svelte  NorthWest.svelte  Outline.svelte  Panels.svelte  Plus.svelte  ProjectSetup.svelte  Proportional.svelte  PropsPicker.svelte  Rect.svelte  Redo.svelte  Ruler.svelte  Save.svelte  Selection.svelte  Setting.svelte  Snap.svelte  ToolIcon.svelte  Trash.svelte  (+6 more)
src/lib/: canvas.ts  cursor.ts  extract.ts  inputs.ts  notebook.ts  types.ts  utils.ts
(+325 files in other folders)
