[package]
name = "sprot-app"
version = "0.0.0"
description = "Survey Prototype Tool"
authors = ["Sanele Mngadi <sanelemngadi17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-title", "dialog-ask", "window-unminimize", "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-show", "window-start-dragging", "fs-write-file", "fs-read-file", "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1.6"
console_log = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
